--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,10 @@ dependencies:
   get_it: ^7.6.7
   injectable: ^2.3.2
 
-  # Local Database
-  sqflite: ^2.3.2
-  path: ^1.8.3
+  # Local Storage
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
 
   # Networking
   http: ^1.2.0
@@ -60,7 +61,6 @@ dependencies:
   # Utils
   intl: ^0.20.2
   shared_preferences: ^2.2.2
-  path_provider: ^2.1.2
   image_picker: ^1.0.7
 
   # AdMob for monetization
@@ -84,6 +84,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   freezed: ^2.4.7
   injectable_generator: ^2.4.1
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
